reduced padding to fix img stretch

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 
 #main-header .port-item {
 width: 30%;
+height:%;
 }
 
 #main-header .port-item:hover {
